--- a/template/footer.html
+++ b/template/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="site-footer bg-dark" style="height: 80px;">
+<footer class="site-footer" style="height: 80px; background-color: #ffffff; box-shadow: 0 -1px 5px rgba(0,0,0,0.05);">
   <div class="container h-100">
     <div class="row align-items-center h-100">
 
@@ -10,17 +10,15 @@
 
       <!-- Centered text -->
       <div class="col-md-4 text-center mb-2 mb-md-0">
-        <p class="mb-0">© Pro You 2025 | All rights reserved</p>
+        <p class="mb-0 fw-bold text-dark">© Pro You 2025 | All rights reserved</p>
       </div>
 
       <!-- Social media icons on the right -->
-      
       <div class="col-md-4 text-md-end text-center">
-        <a href="#" class="me-3"><i class="fab fa-facebook"></i></a>
-        <a href="#" class="me-3"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#" class="me-3 text-dark"><i class="fab fa-facebook"></i></a>
+        <a href="#" class="me-3 text-dark"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="text-dark"><i class="fab fa-linkedin"></i></a>
       </div>
-      
 
     </div>
   </div>
